--- a/doc/templates/indexcontent.html
+++ b/doc/templates/indexcontent.html
@@ -12,6 +12,9 @@
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("solving") }}">Solving</a><br/>
         <span class="linkdescr">recording a game solution using IFM</span></p>
+      <p class="biglink">
+	<a class="biglink" href="{{ pathto("example") }}">Example</a><br/>
+        <span class="linkdescr">a detailed mapping example</span></p>
     </td><td width="50%">
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("usage") }}">Usage</a><br/>
@@ -19,6 +22,9 @@
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("language") }}">Language</a><br/>
         <span class="linkdescr">complete IFM language reference</span></p>
+      <p class="biglink">
+	<a class="biglink" href="{{ pathto("vars") }}">Variables</a><br/>
+        <span class="linkdescr">parameters controlling output</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("tools") }}">Tools</a><br/>
         <span class="linkdescr">other tools bundled with IFM</span></p>
