--- a/doc/static/ifm.css
+++ b/doc/static/ifm.css
@@ -51,6 +51,10 @@ div.sphinxsidebar h4 {
     color: #0000a0;
 }
 
+div.sphinxsidebar li {
+    color: blue;
+}
+
 div.sphinxsidebar p {
     color: red;
 }
