--- a/doc/templates/layout.html
+++ b/doc/templates/layout.html
@@ -1,6 +1,10 @@
 {# Filename: templates/layout.html #}
 {% extends '!layout.html' %}
 
+{% block rootrellink %}
+    <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
+{% endblock %}
+
 {% block relbaritems %}
   {% if current_page_name != 'index' %}
     <li><a href="{{ pathto(current_page_name) }}">{{ title }}</a></li>
