--- a/doc/templates/indexcontent.html
+++ b/doc/templates/indexcontent.html
@@ -8,10 +8,10 @@
         <span class="linkdescr">about IFM</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("maps") }}">Mapping</a><br/>
-        <span class="linkdescr">creating a map using IFM</span></p>
+        <span class="linkdescr">creating a map</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("solving") }}">Solving</a><br/>
-        <span class="linkdescr">recording a game solution using IFM</span></p>
+        <span class="linkdescr">recording a game solution</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("example") }}">Example</a><br/>
         <span class="linkdescr">a detailed mapping example</span></p>
@@ -21,7 +21,7 @@
         <span class="linkdescr">how to run IFM</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("language") }}">Language</a><br/>
-        <span class="linkdescr">complete IFM language reference</span></p>
+        <span class="linkdescr">complete language reference</span></p>
       <p class="biglink">
 	<a class="biglink" href="{{ pathto("vars") }}">Variables</a><br/>
         <span class="linkdescr">parameters controlling output</span></p>
